--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,8 @@ environment:
   global:
     WIXBIN: "c:\\Program Files (x86)\\WiX Toolset v3.11\\bin"
     STACK_BUILD_OPTS: "--no-terminal -j1 --no-system-ghc --install-ghc --test --local-bin-path=.\\windows"
+    CABAL_STORE: "C:\\cs"
+    CABAL_PACKAGE_DB: "%CABAL_STORE%\\ghc-%GHC_MINOR_VERSION%\\package.db"
     # Override the temp directory to avoid sed escaping issues
     # See https://github.com/haskell/cabal/issues/5386
     TMP: "c:\\tmp"
@@ -32,7 +34,6 @@ environment:
     GHC_MINOR_VERSION: "8.6.1"
     GHC: "C:\\ProgramData\\chocolatey\\lib\\ghc\\tools\\ghc-%GHC_MINOR_VERSION%\\bin\\ghc.exe"
     CABAL_VERSION: "2.4.0.0"
-    CABAL_STORE: "C:\\cs"
     CABAL_OPTS: "--allow-newer -fembed_data_files -fbibutils"
     GHC_OPTS: "-fhide-source-paths"
     ARCH: "x64"
@@ -43,7 +44,6 @@ environment:
     GHC_MINOR_VERSION: "8.6.1"
     GHC: "C:\\ProgramData\\chocolatey\\lib\\ghc\\tools\\ghc-%GHC_MINOR_VERSION%\\bin\\ghc.exe"
     CABAL_VERSION: "2.4.0.0"
-    CABAL_STORE: "C:\\cs"
     CABAL_OPTS: "--allow-newer -flua_32bits -fembed_data_files -fbibutils"
     GHC_OPTS: "-fhide-source-paths"
     ARCH: "x86"
@@ -100,7 +100,7 @@ test_script:
   # see https://github.com/haskell/cabal/issues/5516
   - if "%BUILD_TYPE%" == "cabal" (
         cabal --version &&
-        mkdir "%CABAL_STORE%"/ghc-%GHC_MINOR_VERSION%/package.db &&
+        if not exist "%CABAL_PACKAGE_DB%" ( mkdir "%CABAL_PACKAGE_DB%" ) &&
         cabal --store-dir="%CABAL_STORE%" new-update &&
         cabal --store-dir="%CABAL_STORE%" new-build -w %GHC% --enable-tests --run-tests %CABAL_OPTS% --ghc-options="%GHC_OPTS%" . pandoc-citeproc &&
         forfiles /P .\dist-newstyle /M pandoc*.exe /S /C "cmd /C copy @path C:\pandoc\windows"
