--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,6 @@ clone_folder: "c:\\pandoc"
 environment:
   global:
     WIXBIN: "c:\\Program Files (x86)\\WiX Toolset v3.11\\bin"
-    STACK_BUILD_OPTS: "--no-terminal -j1 --no-system-ghc --install-ghc --test --local-bin-path=.\\windows"
     CABAL_STORE: "C:\\cs"
     CABAL_PACKAGE_DB: "%CABAL_STORE%\\ghc-%GHC_MINOR_VERSION%\\package.db"
     # Override the temp directory to avoid sed escaping issues
@@ -11,25 +10,7 @@ environment:
     TMP: "c:\\tmp"
     # see #4201, https://github.com/haskell-tools/haskell-tools/issues/277
   matrix:
-# - BUILD_TYPE: "stack"
-#   OSARCH: "windows-x86_64"
-#   STACK_ROOT: "c:\\sr64"
-#   STACK_YAML: "stack.yaml"
-#   STACK_FLAGS: "--arch=x86_64"
-#   ARCH: "x64"
-#   CHOCO_OPTS: ""
-# - BUILD_TYPE: "stack"
-#   OSARCH: "windows-i386"
-#   STACK_ROOT: "c:\\sr32"
-#   STACK_YAML: "stack.lts11.yaml"
-#   STACK_FLAGS: "--arch=i386 --flag=hslua:lua_32bits"
-#   ARCH: "x86"
-#   CHOCO_OPTS: "--x86"
-#   # note: we do a lts11 build because of
-#   # https://github.com/commercialhaskell/stackage/issues/3385
-#   # with luck this will be fixed in ghc 8.6.
-  - BUILD_TYPE: "cabal"
-    OSARCH: "windows-x86_64"
+  - OSARCH: "windows-x86_64"
     GHC_VERSION: "8.6.1.1"
     GHC_MINOR_VERSION: "8.6.1"
     GHC: "C:\\ProgramData\\chocolatey\\lib\\ghc\\tools\\ghc-%GHC_MINOR_VERSION%\\bin\\ghc.exe"
@@ -38,8 +19,7 @@ environment:
     GHC_OPTS: "-fhide-source-paths"
     ARCH: "x64"
     CHOCO_OPTS: ""
-  - BUILD_TYPE: "cabal"
-    OSARCH: "windows-i386"
+  - OSARCH: "windows-i386"
     GHC_VERSION: "8.6.1.1"
     GHC_MINOR_VERSION: "8.6.1"
     GHC: "C:\\ProgramData\\chocolatey\\lib\\ghc\\tools\\ghc-%GHC_MINOR_VERSION%\\bin\\ghc.exe"
@@ -64,50 +44,33 @@ matrix:
 
 cache:
   - "%CABAL_STORE%"
-  # - "%STACK_ROOT%"
-  # This is where stack install ghc by default, but we don't
-  # cache it because it's too large:
-  # - "c:\\Users\\appveyor\\AppData\\Local\\Programs\\stack"
 
 # Note: to reset build cache, do the following in JavaScript
 # console on appveyor:
 # $.ajax({ url: 'https://ci.appveyor.com/api/projects/jgm/pandoc/buildcache', type: 'DELETE'})
-# We don't do a normal C build, but build in test_script via stack
+
+# We don't do a normal C build, but build in test_script
 build: off
 
 install:
   - choco install wixtoolset --version 3.11.1 %CHOCO_OPTS%
-  - if "%BUILD_TYPE%" == "stack" (
-      choco install haskell-stack %CHOCO_OPTS%
-    )
-  - if "%BUILD_TYPE%" == "cabal" (
-      choco install ghc --version %GHC_VERSION% --ignore-dependencies %CHOCO_OPTS% &&
-      choco install cabal --version %CABAL_VERSION% --ignore-dependencies %CHOCO_OPTS%
-    )
+  - choco install ghc --version %GHC_VERSION% --ignore-dependencies %CHOCO_OPTS%
+  - choco install cabal --version %CABAL_VERSION% --ignore-dependencies %CHOCO_OPTS%
 
 # before_test:
 
 test_script:
-  # The ugly echo "" hack is to avoid complaints about 0 being an invalid file
-  # descriptor
-  - if "%BUILD_TYPE%" == "stack" (
-        stack --version &&
-        stack path &&
-        echo "" | stack clean &&
-        echo "" | stack install --stack-yaml %STACK_YAML% %STACK_BUILD_OPTS% %STACK_FLAGS% pandoc pandoc-citeproc
-    )
   # Note: we manually create cabal store, because of a cabal bug:
   # see https://github.com/haskell/cabal/issues/5516
-  - if "%BUILD_TYPE%" == "cabal" (
-        cabal --version &&
-        if not exist "%CABAL_PACKAGE_DB%" ( mkdir "%CABAL_PACKAGE_DB%" ) &&
-        cabal --store-dir="%CABAL_STORE%" new-update &&
-        cabal --store-dir="%CABAL_STORE%" new-build -w %GHC% --enable-tests --run-tests %CABAL_OPTS% --ghc-options="%GHC_OPTS%" . pandoc-citeproc &&
-        forfiles /P .\dist-newstyle /M pandoc*.exe /S /C "cmd /C copy @path C:\pandoc\windows"
-    )
+  - if not exist "%CABAL_PACKAGE_DB%" ( mkdir "%CABAL_PACKAGE_DB%" )
+  - cabal --version
+  - cabal --store-dir="%CABAL_STORE%" new-update
+  - cabal --store-dir="%CABAL_STORE%" new-build -w %GHC% --enable-tests %CABAL_OPTS% --ghc-options="%GHC_OPTS%" . pandoc-citeproc
+  - cabal --store-dir="%CABAL_STORE%" new-test -w %GHC% %CABAL_OPTS% . pandoc-citeproc
+  - forfiles /P .\dist-newstyle /M pandoc*.exe /S /C "cmd /C copy @path C:\pandoc\windows"
 
 after_test:
-    # .\ in the stack commandline seems to be .\windows\ (where the stack-appveyor.yaml is)
+  # create msi and zip artifacts
   - cd windows
   - .\pandoc.exe -s --toc ..\MANUAL.txt -o MANUAL.html
   - .\pandoc.exe -s ..\COPYING.md -o COPYING.rtf
