--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,7 +66,7 @@ test_script:
   - cabal --version
   - cabal --store-dir="%CABAL_STORE%" new-update
   - cabal --store-dir="%CABAL_STORE%" new-build -w %GHC% --enable-tests %CABAL_OPTS% --ghc-options="%GHC_OPTS%" . pandoc-citeproc
-  - cabal --store-dir="%CABAL_STORE%" new-test -w %GHC% %CABAL_OPTS% . pandoc-citeproc
+  - cabal --store-dir="%CABAL_STORE%" new-test
   - forfiles /P .\dist-newstyle /M pandoc*.exe /S /C "cmd /C copy @path C:\pandoc\windows"
 
 after_test:
