Added 'allow-newer' to cabal.project.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ environment:
     GHC_MINOR_VERSION: "8.6.1"
     GHC: "C:\\ProgramData\\chocolatey\\lib\\ghc\\tools\\ghc-%GHC_MINOR_VERSION%\\bin\\ghc.exe"
     CABAL_VERSION: "2.4.0.0"
-    CABAL_OPTS: "--allow-newer -fembed_data_files -fbibutils"
+    CABAL_OPTS: "-fembed_data_files -fbibutils"
     GHC_OPTS: "-fhide-source-paths"
     ARCH: "x64"
     CHOCO_OPTS: ""
@@ -24,7 +24,7 @@ environment:
     GHC_MINOR_VERSION: "8.6.1"
     GHC: "C:\\ProgramData\\chocolatey\\lib\\ghc\\tools\\ghc-%GHC_MINOR_VERSION%\\bin\\ghc.exe"
     CABAL_VERSION: "2.4.0.0"
-    CABAL_OPTS: "--allow-newer -flua_32bits -fembed_data_files -fbibutils"
+    CABAL_OPTS: "-flua_32bits -fembed_data_files -fbibutils"
     GHC_OPTS: "-fhide-source-paths"
     ARCH: "x86"
     CHOCO_OPTS: "--x86"
