--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -388,6 +388,7 @@ library
                  http-client-tls >= 0.2.4 && < 0.4,
                  http-types >= 0.8 && < 0.13,
                  case-insensitive >= 1.2 && < 1.3,
+                 unicode-transforms >= 0.3 && < 0.4,
                  HsYAML >= 0.1.1.1 && < 0.2
   if impl(ghc < 8.0)
     build-depends: semigroups == 0.18.*,
