--- a/stack.lts11.yaml
+++ b/stack.lts11.yaml
@@ -22,6 +22,8 @@ extra-deps:
 - yaml-0.9.0
 - hslua-1.0.1
 - hslua-module-text-0.2.0
+- skylighting-0.7.4
+- skylighting-core-0.7.4
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-11.17
