--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -699,6 +699,7 @@ benchmark benchmark-pandoc
                    time, bytestring, containers,
                    base >= 4.8 && < 5,
                    text >= 0.11 && < 1.3,
+                   mtl >= 2.2 && < 2.3,
                    criterion >= 1.0 && < 1.6
   if impl(ghc < 8.0)
     build-depends: semigroups == 0.18.*
