--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -205,6 +205,7 @@ extra-source-files:
                  test/haddock-reader.haddock
                  test/insert
                  test/lalune.jpg
+                 test/man-reader.man
                  test/movie.jpg
                  test/media/rId25.jpg
                  test/media/rId26.jpg
