--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -545,6 +545,7 @@ library
                    Text.Pandoc.Lua.Util,
                    Text.Pandoc.CSS,
                    Text.Pandoc.CSV,
+                   Text.Pandoc.GroffChar,
                    Text.Pandoc.UUID,
                    Text.Pandoc.Translations,
                    Text.Pandoc.Slides,
