--- a/cabal.project
+++ b/cabal.project
@@ -3,3 +3,4 @@ packages: pandoc.cabal
 source-repository-package
     type: git
     location: https://github.com/jgm/pandoc-citeproc
+    tag: 0.14.7
