--- a/stack.yaml
+++ b/stack.yaml
@@ -19,15 +19,16 @@ packages:
   - foundation
   extra-dep: true
 extra-deps:
-- pandoc-citeproc-0.14.7
+- pandoc-citeproc-0.14.8
 - haddock-library-1.7.0
 - HsYAML-0.1.1.1
 - texmath-0.11.1
 - yaml-0.9.0
+- cmark-gfm-0.1.6
 - hslua-1.0.1
 - hslua-module-text-0.2.0
 - skylighting-0.7.4
 - skylighting-core-0.7.4
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
-resolver: lts-12.6
+resolver: lts-12.12
