--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -191,6 +191,7 @@ extra-source-files:
                  test/command/SVG_logo.svg
                  test/command/corrupt.svg
                  test/command/inkscape-cube.svg
+                 test/command/lua-pandoc-state.lua
                  test/command/sub-file-chapter-1.tex
                  test/command/sub-file-chapter-2.tex
                  test/command/bar.tex
