--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -541,6 +541,7 @@ library
                    Text.Pandoc.Writers.Powerpoint.Presentation,
                    Text.Pandoc.Writers.Powerpoint.Output,
                    Text.Pandoc.Lua.Filter,
+                   Text.Pandoc.Lua.Global,
                    Text.Pandoc.Lua.Init,
                    Text.Pandoc.Lua.Module.MediaBag,
                    Text.Pandoc.Lua.Module.Pandoc,
