--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -536,8 +536,8 @@ library
                    Text.Pandoc.Readers.Org.ParserState,
                    Text.Pandoc.Readers.Org.Parsing,
                    Text.Pandoc.Readers.Org.Shared,
-                   Text.Pandoc.Readers.Groff,
-                   Text.Pandoc.Writers.Groff,
+                   Text.Pandoc.Readers.Roff,
+                   Text.Pandoc.Writers.Roff,
                    Text.Pandoc.Writers.Powerpoint.Presentation,
                    Text.Pandoc.Writers.Powerpoint.Output,
                    Text.Pandoc.Lua.Filter,
@@ -551,7 +551,7 @@ library
                    Text.Pandoc.Lua.Util,
                    Text.Pandoc.CSS,
                    Text.Pandoc.CSV,
-                   Text.Pandoc.GroffChar,
+                   Text.Pandoc.RoffChar,
                    Text.Pandoc.UUID,
                    Text.Pandoc.Translations,
                    Text.Pandoc.Slides,
