--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -394,8 +394,7 @@ library
                  http-types >= 0.8 && < 0.13,
                  case-insensitive >= 1.2 && < 1.3,
                  unicode-transforms >= 0.3 && < 0.4,
-                 HsYAML >= 0.1.1.1 && < 0.2,
-                 monad-loops >= 0.4 && < 0.5
+                 HsYAML >= 0.1.1.1 && < 0.2
   if impl(ghc < 8.0)
     build-depends: semigroups == 0.18.*,
                    -- basement 0.0.8 and foundation 0.0.21, transitive
