Move Input/Output operations to module T.P.IO

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -523,11 +523,15 @@ library
                    Text.Pandoc.Class
   other-modules:   Text.Pandoc.App.CommandLineOptions,
                    Text.Pandoc.App.FormatHeuristics,
+                   Text.Pandoc.App.InputSettings,
                    Text.Pandoc.App.Opt,
                    Text.Pandoc.App.OutputSettings,
                    Text.Pandoc.Filter.JSON,
                    Text.Pandoc.Filter.Lua,
                    Text.Pandoc.Filter.Path,
+                   Text.Pandoc.IO.Input,
+                   Text.Pandoc.IO.Options,
+                   Text.Pandoc.IO.Output,
                    Text.Pandoc.Readers.Docx.Lists,
                    Text.Pandoc.Readers.Docx.Combine,
                    Text.Pandoc.Readers.Docx.Parse,
