--- a/cabal.project
+++ b/cabal.project
@@ -3,3 +3,4 @@ packages: pandoc.cabal
 source-repository-package
     type: git
     location: https://github.com/jgm/pandoc-citeproc
+    tag: 4b467c62af17ddfc739933891c5ea2291a6b9b76
