--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -1,7 +1,7 @@
 name:            pandoc
 version:         2.6
 cabal-version:   2.0
-build-type:      Custom
+build-type:      Simple
 license:         GPL-2
 license-file:    COPYING.md
 copyright:       (c) 2006-2018 John MacFarlane
@@ -345,9 +345,6 @@ flag derive_json_via_th
 flag trypandoc
   Description:   Build trypandoc cgi executable.
   Default:       False
-
-custom-setup
-  setup-depends: base, Cabal >= 2.0
 
 library
   build-depends: base >= 4.8 && < 5,
