--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -189,6 +189,7 @@ extra-source-files:
                  test/command/*.md
                  test/command/3533-rst-csv-tables.csv
                  test/command/3880.txt
+                 test/command/5182.txt
                  test/command/abbrevs
                  test/command/SVG_logo-without-xml-declaration.svg
                  test/command/SVG_logo.svg
