--- a/cabal.project
+++ b/cabal.project
@@ -1,7 +1,11 @@
 packages: pandoc.cabal
 
+package pandoc
+  pandoc: +embed_data_files -trypandoc
+  pandoc-citeproc: +embed_data_files +bibutils -unicode_collation -test_citeproc -debug
+
 source-repository-package
     type: git
     location: https://github.com/jgm/pandoc-citeproc
-    tag: 4b467c62af17ddfc739933891c5ea2291a6b9b76
+    tag: e36c73ac45c54dec381920e92b199787601713d1
 
