--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: "2.1"
 env: &env
     environment:
       LC_ALL: "C.UTF-8"
-      GHC_OPTS: "-O0 -Wall"
+      GHC_OPTS: "-O0 -Wall -fno-warn-unused-do-bind -Wincomplete-record-updates -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wincomplete-uni-patterns -Werror=missing-home-modules -Widentities -Wcpp-undef -fhide-source-paths"
     docker:
       - image: fpco/stack-build:lts
 
